# guile-basexx

./: .dir-locals.el  .gitignore  Makefile.am  README.org  configure.ac  guix.scm  pre-inst-env.in
.guix/modules/: guile-basexx-package.scm
basexx/: base16.scm  base32.scm  base64.scm
doc/: guile-basexx.texi  local.mk
tests/: base16.scm  base32.scm  base64.scm
